--- a/src/others/pages/live/coms/watcher-item.scss
+++ b/src/others/pages/live/coms/watcher-item.scss
@@ -35,6 +35,7 @@
   .sign{
     margin-left: 18px;
     height: 28px;
+    line-height: 28px;
     border-radius: 14px;
     padding: 10px 14px;
     background: $color-theme;
