--- a/src/others/pages/live/coms/goodsItem.scss
+++ b/src/others/pages/live/coms/goodsItem.scss
@@ -7,8 +7,11 @@
   flex-direction: row;
   justify-content: space-between;
   .goods-img{
+    flex:none;
     width: 200px;
     height: 200px;
+    border-radius: 8px;
+    overflow: hidden;
     position: relative;
     //background: grey;
     .img{
@@ -36,11 +39,13 @@
   }
   .order{
     font-size: 20px;
-    color:red;
+    color:white;
   }
   .goods-dec{
+    flex:1;
     display: flex;
     flex-direction: column;
+    margin-left: 20px;
     .goods-footer{
       margin-top: auto;
       display: flex;
