--- a/src/others/pages/live/live.scss
+++ b/src/others/pages/live/live.scss
@@ -18,6 +18,7 @@
   transform: translate(0,-50%);
 }
 .icon-arrow-left{
+  z-index:1001;
   width: 87px;
   height: 64px;
   line-height: 64px;
@@ -41,7 +42,7 @@
   width: 100vw;
   height: 100vh;
   background: white;
-  z-index: 10;
+  z-index: 1;
 }
 .data-view {
   z-index: 100;
@@ -50,7 +51,6 @@
   position: absolute;
   top:0;
   left:0;
-  z-index:100;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -385,24 +385,39 @@
             height: 72px;
             border-radius: 36px;
             background: rgba(0,0,0,0.3);
+            position: relative;
+          }
+          .like,.cart{
+            width: 45px;
+            height:45px;
+            position: absolute;
+            left:50%;
+            top:50%;
+            transform: translate(-50%,-50%);
+            [class$=img]{
+              width: 100%;
+              height: 100%;
+            }
           }
           .iconfont{
             position: absolute;
             left:50%;
             top:50%;
             transform: translate(-50%,-50%);
-            font-size:45px ;
-            color:white
+            width:50px ;
+            height: 50px;
+            color:white;
           }
-          .icon-gouwucheman{
-            color: #a3780a;
-          }
-          .icon-xinaixin{
-            color: #e75252;
-          }
+          //.icon-gouwucheman{
+          //  color: #a3780a;
+          //}
+          //.icon-xinaixin{
+          //  color: #e75252;
+          //}
           .icon-zhuanfa{
             display: inline-block;
             padding: 0;
+            font-size: 45px;
             line-height: 1.2;
             background: rgba(0,0,0,0);
           }
