--- a/src/others/pages/live/live.scss
+++ b/src/others/pages/live/live.scss
@@ -18,6 +18,7 @@
   100% {left: 20px;top: -500px;transform: scale(2.75,2.75) rotate(1440deg)  ;opacity: 0}
 }
 
+
 .back{
   z-index:1000;
   position: absolute;
@@ -63,7 +64,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+ .ani-img{
+   position: absolute;
+   width: 80px;
+   height: 80px;
+   border-radius: 50%;
+   //left:50%;
+   //bottom:250px;
+   //transform: translate(-50%,0);
+   background: $color-theme;
+ }
   .watcher-detail{
     position: absolute;
     bottom: 0;
@@ -604,5 +614,100 @@
     background: $color-theme;
     color: white;
     border-radius: 40px;
+  }
+}
+.gift-detail{
+  position: absolute;
+  bottom: 0;
+  left:0;
+  width: 100vw;
+  background: black;
+  border-radius: 20px 20px 0 0 ;
+  overflow: hidden;
+  .user-info-cash{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px;
+    border-bottom: solid 2px #eeeeee;
+    .cash-dec{
+      display: flex;
+      color: white;
+      align-items: center;
+      .icon-jinbi{
+        font-size: 30px;
+        color: gold;
+        margin: 0 10px;
+      }
+    }
+    .deposit{
+      color: $color-theme;
+    }
+  }
+  .gift-send-out{
+    .gift-swiper{
+      height: 620px;
+    }
+    .sp-item{
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: flex-start;
+
+      .gift-item-container{
+        margin: 0 25px 22px;
+        color:white;
+        position: relative;
+        .gift-selected{
+          position: absolute;
+          top:0;
+          left:50%;
+          transform: translate(-50%,0);
+          border-radius: 10px;
+          overflow: hidden;
+          z-index:100;
+          background: #464343;
+          .gift-img-selected{
+            width: 180px;
+            height: 180px;
+            .img{
+              width: 100%;
+              height: 100%;
+            }
+          }
+          .gift-name-selected{
+            height: 50px;
+            line-height: 50px;
+            text-align: center;
+            background: $color-theme;
+          }
+          .gift-price-selected{
+            text-align: center;
+            font-size: 18px;
+          }
+        }
+        .gift-img{
+          width: 120px;
+          height: 120px;
+          background: $color-theme;
+          .img{
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .gift-price{
+          font-size: 18px;
+          color:#A4A4A4;
+          text-align: center;
+        }
+        .gift-name{
+          font-size: 25px;
+          color: white;
+          margin-top: 21px;
+          margin-bottom: 10px;
+          text-align: center;
+        }
+      }
+    }
   }
 }
