--- a/src/others/pages/live/live.scss
+++ b/src/others/pages/live/live.scss
@@ -66,14 +66,102 @@
   justify-content: space-between;
  .ani-img{
    position: absolute;
-   width: 80px;
-   height: 80px;
+   width: 50px;
+   height: 50px;
    border-radius: 50%;
-   //left:50%;
-   //bottom:250px;
-   //transform: translate(-50%,0);
-   background: $color-theme;
  }
+  .pusher-set-detail{
+    position: absolute;
+    bottom: 0;
+    left:0;
+    width: 100vw;
+    background:black;
+    border-radius: 20px 20px 0 0 ;
+    padding: 30px 18px;
+    .pusher-set-title{
+      height: 80px;
+      color: white;
+      font-size: 32px;
+      font-weight: bold;
+      .dec{
+        padding-bottom: 16px;
+        border-bottom: solid 4px white;
+      }
+    }
+    .scroll-list{
+      overflow: hidden;
+      margin-top: 30px;
+      .item-list{
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        .item{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-right: 16px;
+          &-content{
+            box-sizing: content-box;
+            width: 90px;
+            height: 90px;
+            overflow: hidden;
+            border-radius: 50%;
+            background: gray;
+            .filter-img{
+              width: 100%;
+              height: 100%;
+            }
+            .bf-dec{
+              height: 90px;
+              line-height:90px;
+              border-radius: 50%;
+              text-align: center;
+              background: gray;
+              color:white
+            }
+          }
+          .selected{
+            border: solid 6px $color-theme;
+          }
+          &-dec{
+            margin-top: 20px;
+            margin-bottom: 30px;
+            color: white;
+          }
+        }
+      }
+    }
+  }
+  .goods-set-detail{
+    position: absolute;
+    bottom: 0;
+    left:0;
+    width: 100vw;
+    background:white;
+    border-radius: 20px 20px 0 0 ;
+    padding: 30px 18px;
+    .goods-set-title{
+      margin-top: 30px;
+      color: white;
+      font-size: 32px;
+    }
+    .set-feature{
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      padding: 30px 18px;
+      .f-item{
+        height: 60px;
+        padding: 0 12px;
+        border-radius: 8px;
+        background: $color-theme;
+        color: white;
+        text-align: center;
+        line-height: 60px;
+      }
+    }
+  }
   .watcher-detail{
     position: absolute;
     bottom: 0;
@@ -293,7 +381,130 @@
     }
   }
 
-
+  .set-config{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    padding: 240px 0;
+    .config-top{
+      width: 725px;
+      margin: 0 0 0 -10.5px;
+      position: relative;
+      .opacity-bg{
+        background: rgba(0,0,0,0.3);
+        width: 100%;
+        height: 340px;
+        border-radius: 18px;
+      }
+      .config-content{
+        position: absolute;
+        width: 100%;
+        top:0;
+        left:0;
+        padding: 0 22px;
+        &-title{
+          height: 90px;
+          line-height: 90px;
+          font-size: 32px;
+          color: white;
+          border-bottom: solid 2px rgba(255,255,255,0.43);
+        }
+        &-body{
+          margin-top: 30px;
+          display: flex;
+          .body-left{
+            flex: none;
+            width: 180px;
+            height:180px;
+            border-radius: 12px;
+            overflow: hidden;
+            position: relative;
+            .cover-img{
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              left:0;
+              top:0;
+              z-index:100
+            }
+            .opacity-bg{
+              width: 100%;
+              height: 100%;
+              background: rgba(0,0,0,0.45);
+            }
+            .icon-jia{
+              font-size: 50px;
+              color: white;
+              position: absolute;
+              left:50%;
+              top:50%;
+              transform: translate(-50%,-50%);
+              z-index: 200;
+            }
+            .upload-dec{
+              position: absolute;
+              left:0;
+              bottom: 8px;
+              width: 100%;
+              color: white;
+              display: flex;
+              font-size: 23px;
+              padding: 0 15px;
+              justify-content: space-around;
+              align-items: center;
+              z-index: 300;
+              .icon-copy{
+                font-size: 28px;
+              }
+            }
+          }
+          .body-right{
+            margin-left: 20px;
+            flex:1;
+            border-bottom: solid 2px rgba(255,255,255,0.43);
+            .title-input{
+              font-size: 32px;
+              color: white;
+            }
+            .title-input-holder{
+              font-size: 32px;
+              color: rgba(255,255,255,0.43);
+            }
+          }
+        }
+      }
+    }
+    .config-bottom{
+        .feature-list{
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          padding: 0 125px;
+          font-size: 20px;
+          color:white;
+          .item{
+            text-align: center;
+          }
+          .iconfont{
+            font-size: 48px;
+            color:white;
+            margin-bottom: 14px;
+          }
+        }
+        &-begin{
+          margin: 35px auto 0;
+          width: 585px;
+          height: 95px;
+          border-radius: 47.5px;
+          line-height: 95px;
+          text-align: center;
+          font-size: 40px;
+          color:white;
+          background: $color-theme;
+        }
+      }
+  }
 
   .live-header{
     position: relative;
@@ -689,7 +900,7 @@
         .gift-img{
           width: 120px;
           height: 120px;
-          background: $color-theme;
+          //background: $color-theme;
           .img{
             width: 100%;
             height: 100%;
@@ -708,6 +919,99 @@
           text-align: center;
         }
       }
+    }
+  }
+}
+.deposit-detail{
+  padding: 0 32px;
+  position: absolute;
+  bottom: 0;
+  left:0;
+  width: 100vw;
+  border-radius: 20px 20px 0 0 ;
+  background: white;
+  .deposit-agreement{
+    text-align: center;
+    margin: 20px 0 30px;
+    font-size: 24px;
+    color:#7c7c7c;
+    .agreement{
+      color:#F1C73B;
+    }
+  }
+  .user-info-deposit{
+    position: relative;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    .cash-dec{
+      display: flex;
+      align-items: center;
+      .icon-jinbi{
+        font-size: 33px;
+        color: gold;
+        margin-right: 10px;
+      }
+    }
+    .deposit-dec{
+      position: absolute;
+      right: 50%;
+      transform: translate(50%,0);
+      font-size: 36px;
+      color: #7c7c7c;
+    }
+  }
+  .deposit-list{
+    margin-top: 50px;
+    .deposit-swiper{
+      min-height: 350px;
+      .dp-item{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .s-item{
+          width: 210px;
+          height: 120px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          background: #F9F9F8;
+          margin-bottom: 22px;
+          &-top{
+            display: flex;
+            align-items: center;
+            .icon-jinbi{
+              font-size: 28px;
+              color:gold;
+            }
+            .coin-amount{
+              font-size: 38px;
+              font-weight: bold;
+            }
+          }
+          .coin-price{
+            color:#7c7c7c;
+            font-size: 25px;
+          }
+        }
+      }
+    }
+  }
+}
+.aside-set{
+  position: absolute;
+  right: 20px;
+  top:280px;
+  .item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 16px;
+    color:white;
+    .iconfont{
+      font-size: 50px;
+      color:white
     }
   }
 }
