--- a/src/components/float-msg/float-msg.scss
+++ b/src/components/float-msg/float-msg.scss
@@ -17,4 +17,16 @@
       flex: none;
     }
   }
+  .msg-scroll-list::-webkit-scrollbar{
+    display:none;
+    width:0;
+    height:0;
+    color:transparent;
+  }
+}
+::-webkit-scrollbar{
+  display:none;
+  width:0;
+  height:0;
+  color:transparent;
 }
