--- a/src/others/pages/live/live.scss
+++ b/src/others/pages/live/live.scss
@@ -503,8 +503,8 @@
             margin-bottom: 14px;
           }
           .reverse-img{
-            width: 48px;
-            height: 48px;
+            width: 46px;
+            height: 46px;
             display: block;
             margin-bottom: 14px;
           }
@@ -718,7 +718,7 @@
             left:50%;
             top:50%;
             transform: translate(-50%,-50%);
-            [class$=img]{
+            .cart-img,.like-img{
               width: 100%;
               height: 100%;
             }
@@ -1035,8 +1035,8 @@
       color:white
     }
     .reverse-img{
-      width: 50px;
-      height: 50px;
+      width: 46px;
+      height: 46px;
       display: block;
       margin-bottom: 6px;
     }
@@ -1064,3 +1064,4 @@
     }
   }
 }
+
