--- a/src/others/pages/live/live.scss
+++ b/src/others/pages/live/live.scss
@@ -381,7 +381,7 @@
       }
       .store{
         border-left: solid 2px #A1A1A1;
-        border-right: solid 2px #A1A1A1;
+        //border-right: solid 2px #A1A1A1;
       }
     }
   }
